<resources>
    <string name="app_name">Calculadora</string>
    <string name="titulo">CALCULADORA</string>
    <string name="numero_uno">Número dos</string>
    <string name="numero_dos">Número dos</string>
    <string name="btCalcular">CALCULAR</string>
    <string name="mensaje_error_numero_uno">Digite el número uno</string>
    <string name="mensaje_error_numero_dos">Digite el número dos</string>
    <string name="btnlimpiar">LIMPIAR</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string name="mensaje_error_division_cero">No puede dividir por cero</string>

    <string-array name="operaciones">
        <item>@string/sumar</item>
        <item>@string/restar</item>
        <item>@string/multiplicar</item>
        <item>@string/dividir</item>
    </string-array>
</resources>